@@ -343,30 +343,6 @@ non_blank:
     return(tok);
 }
 
-/* Get token and save it in buf[], expanding macro calls. */
-static int
-get_expanded_token(char buf[], int bufsiz)
-{
-    const char *macro_body;
-    int t;
-
-    while ((t = get_unexpanded_token(buf, bufsiz)) != EOF) {
-        if (t != TOKT_ALPHA) {
-            break; /* non-alpha */
-        } else if ((macro_body = macro_definition_lookup(buf)) == NULL) {
-            break; /* not a macro name */
-        } else {
-            /* Push replacement onto input, with newlines properly
-             * substituted by "fake newlines". This hack is needed
-             * to keep the count of line in input correct even if
-             * expansion of multiline macros is involved. */
-            put_back_string_cooked(macro_body);
-        }
-    }
-    return(t);
-}
-
-
 /*
  * PUBLIC FUNCTIONS.
  */
@@ -395,39 +371,46 @@ get_unexpanded_token(char buf[], int bufsiz)
     return(tok);
 }
 
+/* Get token and save it in buf[], expanding macro calls. */
+int
+get_expanded_token(char buf[], int bufsiz)
+{
+    const char *macro_body;
+    int tok;
+
+    while ((tok = get_unexpanded_token(buf, bufsiz)) != EOF) {
+        if (tok != TOKT_ALPHA) {
+            break; /* non-alpha */
+        } else if ((macro_body = macro_definition_lookup(buf)) == NULL) {
+            break; /* not a macro name */
+        } else {
+            /* Push replacement onto input, with newlines properly
+             * substituted by "fake newlines". This hack is needed
+             * to keep the count of line in input correct even if
+             * expansion of multiline macros is involved. */
+            put_back_string_cooked(macro_body);
+        }
+    }
+    return(tok);
+}
+
 /* Get token from ratfor current global input stream (handling macro
- * expansions, macro definitons and file inclusion), and save it in
- * buf[]. */
+ * expansions and being aware of file inclusion), and save it in buf[]. */
 int
 get_token(char buf[], int bufsiz)
 {
-    int t, i;
     int tok;
-    char path[MAXPATH];
 
-    for(;;) {
-        tok = get_expanded_token(buf, bufsiz);
-        if (!STREQ(buf, "include"))
-            return(tok);
-        /* FIXME: file inclusion to be moved out to parser */
-        /* deal with file inclusion */
-        for (i = 0; ; i = SSTRLEN(path)) {
-            if (i >= MAXPATH)
-                synerr_fatal("name of included file too long.");
-            t = get_expanded_token(&path[i], MAXPATH);
-            if (is_stmt_ending(t))
-                break;
-        }
-        path[i] = EOS;
-        push_file_stack(path);
-    }
+    tok = get_expanded_token(buf, bufsiz);
+    return(tok);
 }
 
-/* Like `get_token()', but skip any leading blanks. */
+/* Like `get_token', but skip any leading blanks. */
 int
 get_nonblank_token(char buf[], int bufsiz)
 {
     int tok;
+    
     do {
         tok = get_token(buf, bufsiz);
     } while(is_blank(tok));
