@@ -23,6 +23,7 @@
 BEGIN_C_DECLS
 
 int get_unexpanded_token(char [], int);
+int get_expanded_token(char [], int);
 int get_token(char [], int);
 int get_nonblank_token(char [], int);
 
